# vfn2

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: corpus_runner.md  evaluation_baseline_20260709.md  evaluation_capability_followup_20260709.md  evaluation_exhaustive_followup_20260709.md  evaluation_frozen_lifetime_20260710.md  evaluation_frozen_multipackage_20260710.md  evaluation_unseen_followup_20260710.md  execplan_current.md
ghidra_scripts/: dynamic_overflow_proof.py  enable_paramid.py  export_functions.py  pcode_trace.py  raw_seed_functions.py
research/: firmware_campaign_v1.json
scripts/: build_known_overflow_sources.py  build_romeo_ground_truth.py  decompile.py  eval_memory_sets.py  evaluate_llm_hypotheses.py  gdb_exact_memory_trace.py  llm_adjudication_provider.py  llm_hypothesis_provider.py  llm_provider_common.py  llm_replay_repair_provider.py  llm_semantic_seed_provider.py  run_known_overflow_corpus.py  score_romeo_cwe121.py  sink_audit.py  trace_static_target.py
tests/: conftest.py  test_adjudication.py  test_adjudication_autoprove.py  test_adjudication_investigation.py  test_backend_contracts.py  test_build_romeo_ground_truth.py  test_callgraph_merge.py  test_candidate_clustering.py  test_capability_benchmark.py  test_capability_expansion.py  test_completeness_corpus.py  test_concolic.py  test_corpus_runner.py  test_cross_arch_replay.py  test_decompile.py  test_dynamic_overflow_proof.py  test_end_to_end_pipeline.py  test_entrypoints.py  test_env_utils.py  test_eval_memory_sets.py  test_execution_envelope.py  test_ingest.py  (+34 more)
(+200 files in other folders)
